🔨 Improve the execution engine, and add docs